WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99752
[skia] Handle if we fail to allocate nonPlatformCanvas in ImageBuffer constructor
https://bugs.webkit.org/show_bug.cgi?id=99752
Summary
[skia] Handle if we fail to allocate nonPlatformCanvas in ImageBuffer constru...
Mike Reed
Reported
2012-10-18 13:44:31 PDT
Handle if we fail to allocate nonPlatformCanvas in ImageBuffer constructor
Attachments
Patch
(2.08 KB, patch)
2012-10-18 13:48 PDT
,
Mike Reed
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Reed
Comment 1
2012-10-18 13:48:43 PDT
Created
attachment 169464
[details]
Patch
Stephen White
Comment 2
2012-10-18 14:16:41 PDT
Comment on
attachment 169464
[details]
Patch Looks good. r=me. I wonder if we should have some kind of SkDevice::hasValidBackingStore() utility function in Skia? Or SkBitmap::isValid()?
Mike Reed
Comment 3
2012-10-18 14:18:44 PDT
we don't have such a utility, but might be a good thing to add.
WebKit Review Bot
Comment 4
2012-10-18 14:28:07 PDT
Comment on
attachment 169464
[details]
Patch Clearing flags on attachment: 169464 Committed
r131805
: <
http://trac.webkit.org/changeset/131805
>
WebKit Review Bot
Comment 5
2012-10-18 14:28:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug